--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="main">
+  
   <head>
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
@@ -8,8 +9,14 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-    <p>we are developers</p>
+    <h1 id="title">
+      <p>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab cupiditate aliquam veritatis ducimus facere quis sit quidem quisquam rem voluptatum blanditiis et, dolor suscipit optio corrupti molestias accusamus deleniti omnis.
+      </p>
+    </h1>
+    <div id="img-div">
+    
+   </div>
     <p>we are good developers</p>
     <script  src="js/index.js"></script>
   </body>
