i added a div caption

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
       </p>
     </h1>
     <div id="img-div">
-    
+      <img id="image">
+      <div id="img-caption">
+        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure consequuntur laboriosam tempora, neque quasi error odio maxime, facilis, eveniet similique dicta quam. Ex odio explicabo quis incidunt quas, nihil suscipit!</p>
+      </div>
+  
    </div>
     <p>we are good developers</p>
     <script  src="js/index.js"></script>
