I have added tribute info and tribute link id to the reference and paragraph

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div id="img-div">
       <img id="image">
       <div id="img-caption">
-        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure consequuntur laboriosam tempora, neque quasi error odio maxime, facilis, eveniet similique dicta quam. Ex odio explicabo quis incidunt quas, nihil suscipit!</p>
+        <p id="tribute-info"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure consequuntur laboriosam tempora, neque quasi error odio maxime, facilis, eveniet similique dicta quam. Ex odio explicabo quis incidunt quas, nihil suscipit!</p>
+        <a href id="tribute-link" = "https://google.com/" target = "_blank"></a>
       </div>
   
    </div>
